--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,4 +11,7 @@ add_executable(untitled28 task_1-2_4-7_test.c
         task_4.c
         thread_io/vector.h
         thread_io/vector.c
+        task_9_/task_9.c
+        file_test_9.txt
+
 )
