--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(untitled28 C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(untitled28 task_1-2_4-7_test.c
+add_executable(untitled28 task_1-2_4-8_test.c
         thread_io/thread_io.h
         thread_io/thread_io.c
         thread_io/test_thread_io.c
@@ -12,4 +12,5 @@ add_executable(untitled28 task_1-2_4-7_test.c
         thread_io/vector.h
         thread_io/vector.c
         task_9_/task_9.c
+        task_10_/task_10.c
 )
